--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "chart.js": "^4.4.9",
     "framer-motion": "^12.6.5",
     "jalali-moment": "^3.3.11",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.0",
