--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
