--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "pm2 start serve --name macol -- -s dist"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
